--- a/data-management-starter/pom.xml
+++ b/data-management-starter/pom.xml
@@ -51,6 +51,17 @@
             <artifactId>data-management-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+<!--        多数据源读写分离依赖-->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+            <version>4.0.0-RC1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.23</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
